--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    reports {
+        junitXml.outputLocation.set(layout.buildDirectory.dir("test-junit-xml"))
+    }
 }
