--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
-    reports {
-        junitXml.outputLocation.set(layout.buildDirectory.dir("test-junit-xml"))
-    }
+//    reports {
+//        junitXml.outputLocation.set(layout.buildDirectory.dir("test-junit-xml"))
+//    }
 }
